# marginfi-v2

./: Cargo.toml
clients/rust/marginfi-cli/: Cargo.toml
clients/rust/marginfi-cli/src/: entrypoint.rs
clients/rust/marginfi-cli/src/processor/: oracle.rs
programs/marginfi/: Cargo.toml
programs/marginfi/fuzz/: Cargo.toml
programs/marginfi/src/: lib.rs
programs/marginfi/src/instructions/marginfi_account/: borrow.rs  deposit.rs  flashloan.rs  liquidate.rs  repay.rs  withdraw.rs
programs/marginfi/src/state/: marginfi_account.rs  price.rs
programs/marginfi/tests/: tests.rs
test-utils/: Cargo.toml
test-utils/src/: lib.rs  utils.rs
