[workspace]
resolver = "2"
members = ["programs/*"]

[workspace.dependencies]
solana-cli-output = "2.2.1"
solana-client = "2.2.1"
solana-sdk = "2.3.0"
solana-logger = "2.2.1"
solana-program = "2.2.1"
solana-program-test = "2.2.1"
solana-account-decoder = "2.2.1"
solana-measure = "2.2.1"
solana-metrics = "2.2.1"
solana-transaction-status = "2.2.1"
solana-address-lookup-table-program = "2.2.1"
spl-token = "4.0.0"
spl-associated-token-account = "2.2.0"
spl-transfer-hook-interface = "0.6.3"
spl-tlv-account-resolution = "0.6.3"
spl-discriminator = "0.2.2"
spl-token-2022 = "3.0.2"

anchor-spl = { version = "0.32.1" }
anchor-client = { version = "0.32.1" }
anchor-lang = { version = "0.32.1" }

pyth-sdk-solana = "=0.10.1"
pyth-solana-receiver-sdk = "0.3.1"
borsh = "^0.10.3"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
